# crunchyroll-android-badges

./: .gitignore  LICENSE  README.md  RESEARCH_PROMPT.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: anime-generation-catalog.yml
app/: build.gradle.kts  proguard-rules.pro
app/schemas/com.maverde.crunchybadges.data.local.database.AnimeDatabase/: 4.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/: click-interceptor.js  content-android.js  content.js  injected.js  style.css
app/src/main/assets/_locales/de/: messages.json
app/src/main/res/drawable/: card_focus_selector.xml
app/src/main/res/layout/: activity_detail.xml  activity_main.xml  activity_settings.xml  activity_splash.xml  bottom_sheet_filters.xml  item_anime_card.xml
app/src/main/res/values/: colors.xml  strings.xml
docs/catalog/: catalog_anime_generation.json
docs/superpowers/plans/: 2026-06-07-anime-generation-app-integration.md  2026-06-07-anime-generation-pipeline.md
docs/superpowers/specs/: 2026-06-07-anime-generation-multiplatform-design.md
tools/anime_generation_pipeline/: .gitignore  pyproject.toml
tools/anime_generation_pipeline/agpipeline/: age.py  build_catalog.py  enrich.py  matching.py  models.py  sources.py  validate.py
tools/anime_generation_pipeline/tests/: test_age.py  test_build_catalog.py  test_cli_write.py  test_enrich.py  test_id_mapping.py  test_matching.py  test_models.py  test_smoke.py  test_sources.py  test_validate.py
tools/anime_generation_pipeline/tests/fixtures/: anime-list-sample.json
(+40 files in other folders)
